render functionality for bookmarks.js

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       <option value=2>2 Stars</option>
     </select>
   </form> 
+  <div class = "error-message"></div>
+  <div class = "add-new-bookmark"></div>
+  <div class = "bookmark-div"></div>
   <div class="bookmark-div">
     <div class="bookmark-title">
       Bookmark Title
