finished base functionality

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <button id="adding-bookmark">Add Bookmark</button>
     <label for="choose-rating"></label>
     <select name="rating" id="choose-rating">
-      <option value=null>Minimum Rating</option>
+      <option value=1>Minimum Rating</option>
       <option value=5>5 Stars</option>
       <option value=4>4 Stars</option>
       <option value=3>3 Stars</option>
