--- a/index.html
+++ b/index.html
@@ -5,28 +5,41 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>My Bookmarks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" media="screen" href="styles/grids.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="styles/index.css" />
 </head>
 <body>
-  <header role="banner">
-    <h1>My Bookmarks</h1>
-  </header>   
-  <form>
-    <label for="adding-bookmark"></label>
-    <button id="adding-bookmark">Add Bookmark</button>
-    <label for="choose-rating"></label>
-    <select name="rating" id="choose-rating">
-      <option value=1>Minimum Rating</option>
-      <option value=5>5 Stars</option>
-      <option value=4>4 Stars</option>
-      <option value=3>3 Stars</option>
-      <option value=2>2 Stars</option>
-    </select>
-  </form> 
-  <div class = "error-message"></div>
-  <div class = "add-new-bookmark"></div>
-  <div class = "bookmark-div"></div>
+  <div class="row">
+    <div class="col-12">
+      <header role="banner">
+        <h1>My Bookmarks</h1>
+      </header> 
+    </div> 
+  </div> 
+  <div class="row">
+    <form>
+      <label for="adding-bookmark"></label>
+      <button id="adding-bookmark">Add Bookmark</button>
+      <label for="choose-rating"></label>
+      <select name="rating" id="choose-rating">
+        <option value=1>Minimum Rating</option>
+        <option value=5>5 Stars</option>
+        <option value=4>4 Stars</option>
+        <option value=3>3 Stars</option>
+        <option value=2>2 Stars</option>
+      </select>
+    </form>
+  </div>
+  <div class="row">
+    <div class = "error-message"></div>
+  </div>
+  <div class="row">
+    <div class = "add-new-bookmark-form"></div>
+  </div>
+  <div class="row">
+    <div class = "bookmark-div"></div>
+  </div>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="scripts/api.js"></script>
   <script type="text/javascript" src="scripts/store.js"></script>
