some styling, responsive design complete

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>My Bookmarks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" media="screen" href="styles/grids.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="styles/index.css" />
@@ -18,7 +19,7 @@
     </div> 
   </div> 
   <div class="row">
-    <form>
+    <form class="add-rating-form">
       <label for="adding-bookmark"></label>
       <button id="adding-bookmark">Add Bookmark</button>
       <label for="choose-rating"></label>
@@ -38,7 +39,7 @@
     <div class = "add-new-bookmark-form"></div>
   </div>
   <div class="row">
-    <div class = "bookmark-div"></div>
+    <div class = "outer-bookmark-div"></div>
   </div>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="scripts/api.js"></script>
