working on accessibility

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       </header> 
     </div> 
   </div> 
+  <main role="main">
   <div class="row">
     <form class="add-rating-form">
       <label for="adding-bookmark"></label>
@@ -41,6 +42,7 @@
   <div class="row">
     <div class = "outer-bookmark-div"></div>
   </div>
+</main>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="scripts/api.js"></script>
   <script type="text/javascript" src="scripts/store.js"></script>
